--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="navbar-wrapper">
             <div class="navbar-singel-wrapper">
               <div class="navbar-left-content">
-                <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current"><img src="#"
+                <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current"><img src="https://res.cloudinary.com/duot0gqlu/image/upload/c_limit,h_48,w_178/v1684840215/logo-removebg-preview_zzoq7j.png"
                     loading="lazy" alt="" class="navbar-logo-image" /></a>
                 <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
                   <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a><a
@@ -1010,7 +1010,7 @@
           <div class="our-dentists-left-content">
             <div data-w-id="9c43254e-4aac-a7ec-ef9f-cfceb138a7f7" class="our-dentists-image-wrapper">
               <img
-                src="https://assets.website-files.com/62bc5579271a071d88163e1f/62beb86baf52b7236a12d22b_Our%20Dentists%20Image.png"
+                src="https://res.cloudinary.com/duot0gqlu/image/upload/v1684840194/Dr_Emmanuel-removebg-preview_ejkwdl.png"
                 loading="lazy" style="
                     -webkit-transform: translate3d(0, 0, 0) scale3d(1.5, 1.5, 1)
                       rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
@@ -1023,8 +1023,8 @@
                   "
                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 97vw, (max-width: 1919px) 39vw, 530px"
                 srcset="
-                    https://assets.website-files.com/62bc5579271a071d88163e1f/62beb86baf52b7236a12d22b_Our%20Dentists%20Image-p-500.png 500w,
-                    https://assets.website-files.com/62bc5579271a071d88163e1f/62beb86baf52b7236a12d22b_Our%20Dentists%20Image.png       533w
+                https://res.cloudinary.com/duot0gqlu/image/upload/v1684840194/Dr_Emmanuel-removebg-preview_ejkwdl.png 500w,
+                    https://res.cloudinary.com/duot0gqlu/image/upload/v1684840194/Dr_Emmanuel-removebg-preview_ejkwdl.png       533w
                   " alt="" class="our-dentists-image" />
               <div style="
                     -webkit-transform: translate3d(0, 0px, 0) scale3d(1, 1, 1)
@@ -1076,7 +1076,7 @@
                       <div class="overflow-hidden">
                         <h3 data-w-id="d4250a0f-0a2a-f564-01ee-3e51225e8f73" style="opacity: 0"
                           class="our-dentists-name">
-                          Dr. Kenny Giroud, DMD
+                          Dr Ngonya Emmanuel
                         </h3>
                       </div>
                       <div class="overflow-hidden">
@@ -1094,7 +1094,7 @@
                   <div class="our-dentists-slide w-slide">
                     <div class="our-dentists-singel-slide">
                       <div class="our-dentists-info-text">Dentist</div>
-                      <h3 class="our-dentists-name">Dr. Kenny Giroud, DMD</h3>
+                      <h3 class="our-dentists-name">Dr Ngonya Emmanuel</h3>
                       <p class="info-details-text">
                         We understand the longer dental practices remain
                         closed to preventive care and treatment for early
@@ -1107,7 +1107,7 @@
                   <div class="our-dentists-slide w-slide">
                     <div class="our-dentists-singel-slide">
                       <div class="our-dentists-info-text">Dentist</div>
-                      <h3 class="our-dentists-name">Dr. Kenny Giroud, DMD</h3>
+                      <h3 class="our-dentists-name">Dr Ngonya Emmanuel</h3>
                       <p class="info-details-text">
                         We understand the longer dental practices remain
                         closed to preventive care and treatment for early
@@ -1162,24 +1162,31 @@
           <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100"
             class="banner-tab-wrapper w-tabs">
             <div class="tab-menu-wrapper w-tab-menu">
-              <a data-w-tab="Tab 1" class="single-tabs-link w-inline-block w-tab-link w--current">
+              <a data-w-tab="Tab 1" class="single-tabs-link w-inline-block w-tab-link w--current" 
+              style="background-color: rgb(24, 126, 0); border-color: rgb(24, 126, 0);" 
+              id="w-tabs-0-data-w-tab-0" href="#w-tabs-0-data-w-pane-0" 
+              role="tab" aria-controls="w-tabs-0-data-w-pane-0" aria-selected="true">
                 <div class="single-tabs-menu-image-wrapper">
-                  <img loading="lazy"
-                    src="https://assets.website-files.com/62bc5579271a071d88163e1f/62beceef55bacb8e67595477_Single%20Tabs%20Menu%20Image1.png"
-                    alt="" class="single-tabs-menu-image" />
+                  <img loading="lazy" src="https://assets.website-files.com/62bc5579271a071d88163e1f/62beceef55bacb8e67595477_Single%20Tabs%20Menu%20Image1.png" 
+                  alt="" class="single-tabs-menu-image" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) 
+                  rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                 </div>
                 <div class="single-tabs-menu-text-wrapper">
                   <div class="overflow-hidden">
-                    <h4 class="single-tabs-menu-title">Personal Care</h4>
+                    <h4 class="single-tabs-menu-title" 
+                    style="opacity: 1; color: rgb(255, 255, 255); transform: translate3d(0px, 0px, 0px) 
+                    scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); 
+                    transform-style: preserve-3d;" _msttexthash="297401" _msthash="163">Soins personnels</h4>
                   </div>
                   <div class="overflow-hidden">
-                    <p class="single-tabs-menu-paragraph">
-                      If you are going to use a passage of you need to be sure
-                      anything
-                    </p>
+                    <p class="single-tabs-menu-paragraph" style="opacity: 1; 
+                    color: rgb(255, 255, 255); transform: translate3d(0px, 0px, 0px) 
+                    scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" _msttexthash="2457585" _msthash="164"> Si vous allez utiliser un passage de, vous devez être sûr
+ rien </p>
                   </div>
                 </div>
-              </a><a data-w-tab="Tab 2" data-w-id="dea4709d-a192-0f0e-980b-00c0a7f593ab"
+              </a>
+              <a data-w-tab="Tab 2" data-w-id="dea4709d-a192-0f0e-980b-00c0a7f593ab"
                 class="single-tabs-link w-inline-block w-tab-link">
                 <div class="single-tabs-menu-image-wrapper">
                   <img loading="lazy"
@@ -1525,7 +1532,7 @@
             <div class="newsletter-right-contant">
               <div class="newsletter-image-wrapper">
                 <img
-                  src="https://assets.website-files.com/62bc5579271a071d88163e1f/62befc05f7186079ecdc8e53_Newsletter%20Image.png"
+                  src="https://res.cloudinary.com/duot0gqlu/image/upload/v1684840194/Dr_Emmanuel-removebg-preview_ejkwdl.png"
                   loading="lazy" alt="" class="newsletter-image" />
               </div>
             </div>
