--- a/about-us.html
+++ b/about-us.html
@@ -1140,7 +1140,7 @@
               <div class="newsletter-right-contant">
                 <div class="newsletter-image-wrapper">
                   <img
-                    src="https://assets.website-files.com/62bc5579271a071d88163e1f/62befc05f7186079ecdc8e53_Newsletter%20Image.png"
+                    src="https://res.cloudinary.com/duot0gqlu/image/upload/v1684840194/Dr_Emmanuel-removebg-preview_ejkwdl.png"
                     loading="lazy"
                     alt=""
                     class="newsletter-image"
