--- a/pricing-plan.html
+++ b/pricing-plan.html
@@ -491,7 +491,7 @@
                   <a
                     data-w-id="52ede8c9-9453-abe1-7de6-74a0b4250317"
                     style="background-color: rgb(255, 255, 255)"
-                    href="/product/basic"
+                    href="./product/basic.html"
                     class="pricing-singel-wrapper w-inline-block"
                     ><h2
                       style="color: rgb(37, 36, 53)"
@@ -555,7 +555,7 @@
                   <a
                     data-w-id="52ede8c9-9453-abe1-7de6-74a0b4250317"
                     style="background-color: rgb(255, 255, 255)"
-                    href="/product/standard"
+                    href="./product/standard.html"
                     class="pricing-singel-wrapper w-inline-block"
                     ><h2
                       style="color: rgb(37, 36, 53)"
@@ -619,7 +619,7 @@
                   <a
                     data-w-id="52ede8c9-9453-abe1-7de6-74a0b4250317"
                     style="background-color: rgb(255, 255, 255)"
-                    href="/product/premium"
+                    href="./product/premium.html"
                     class="pricing-singel-wrapper w-inline-block"
                     ><h2
                       style="color: rgb(37, 36, 53)"
