--- a/contact-us.html
+++ b/contact-us.html
@@ -47,10 +47,10 @@
           <div class="navbar-wrapper">
             <div class="navbar-singel-wrapper">
               <div class="navbar-left-content">
-                <a href="/" aria-current="page" class="navbar-logo-link w-nav-brand w--current"><img src="https://res.cloudinary.com/duot0gqlu/image/upload/c_limit,h_48,w_178/v1684840215/logo-removebg-preview_zzoq7j.png"
+                <a href="./index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current"><img src="https://res.cloudinary.com/duot0gqlu/image/upload/c_limit,h_48,w_178/v1684840215/logo-removebg-preview_zzoq7j.png"
                     loading="lazy" alt="" class="navbar-logo-image" /></a>
                 <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
-                  <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a><a
+                  <a href="./index.html" aria-current="page" class="nav-link w-nav-link w--current">Home</a><a
                     href="./about-us.html" class="nav-link w-nav-link">About us</a><a href="./pricing-plan.html"
                     class="nav-link w-nav-link">Pricing</a><a href="./contact-us.html"
                     class="nav-link mr0 w-nav-link">Contact</a><a href="./contact-us.html"
